--- a/html/about_us.html
+++ b/html/about_us.html
@@ -77,17 +77,17 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Case</a>
+                <a class="nav-link" id = "TexasCases" href="#">Case</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Recovery</a>
-              </li>
+              </li> -->
               <li class="nav-item">
-                <a class="nav-link" href="#">Fatality</a>
+                <a class="nav-link" id = "TexasDeaths" href="#">Fatality</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Test</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -394,7 +394,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   <!-- Bootstrap JS -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-
+  <script src = "js/TexasNumbers.js">
+  texasConfirmedDeaths();
+  </script>
   <script type="text/javascript">
     $(document).ready(function() {
       $('#sidebarCollapse').on('click', function() {
