--- a/html/contact.html
+++ b/html/contact.html
@@ -73,17 +73,17 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Case</a>
+                <a class="nav-link" id = "TexasCases" href="#">Case</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Recovery</a>
-              </li>
+              </li> -->
               <li class="nav-item">
-                <a class="nav-link" href="#">Fatality</a>
+                <a class="nav-link" id = "TexasDeaths" href="#">Fatality</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Test</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -206,7 +206,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js" integrity="sha256-dHf/YjH1A4tewEsKUSmNnV05DDbfGN3g7NMq86xgGh8=" crossorigin="anonymous"></script>
   <script src="contact.js"></script>
-
+  <script src = "js/TexasNumbers.js">
+  texasConfirmedDeaths();
+  </script>
 
   <script type="text/javascript">
     $(document).ready(function() {
