sub categories health and visualizations

--- a/html/stats.html
+++ b/html/stats.html
@@ -74,13 +74,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="nav navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" id = "TexasCases" href="#">Case</a>
+                <a class="nav-link" id="TexasCases" href="#">Case</a>
               </li>
               <li class="nav-item">
                 <!-- <a class="nav-link" href="#">Recovery</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" id = "TexasDeaths" href="#">Fatality</a>
+                <a class="nav-link" id="TexasDeaths" href="#">Fatality</a>
               </li>
               <li class="nav-item">
                 <!-- <a class="nav-link" href="#">Test</a> -->
@@ -92,15 +92,12 @@
       <div class="container">
 
         <!-- Subtopics row-->
+        <h1> Health :</h1>
         <div class="row">
 
-          <div class="col-md" >
+          <div class="col-sm-3">
             <div class="card img-card-container" style="width: 12rem;height: 460px;">
               <img class="card-img-top card-image-hover" src="img/Virus.png" alt="Card image cap">
-
-              <div class="middle-card-image-content">
-                <div class="card-image-text btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Click</div>
-              </div>
 
               <div class="card-body">
                 <h5 class="card-title">Precautions</h5>
@@ -110,33 +107,13 @@
             </div>
           </div>
 
-          <div class="col-md" >
-            <div class="card img-card-container" style="width: 12rem;height: 460px;">
-              <img class="card-img-top card-image-hover" src="img/visual.png" alt="Card image cap">
-
-              <div class="middle-card-image-content">
-                <div class="card-image-text btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Click</div>
-              </div>
-
-              <div class="card-body">
-                <h5 class="card-title">Visualization</h5>
-                <p class="card-text">Graphic Visualization</p><br><br>
-                <a href="https://dfwcovid19.utdallas.edu" class="btn btn-primary">Click Here</a>
-              </div>
-            </div>
-          </div>
 
 
 
-          <div class="col-md" >
+          <div class="col-sm-3">
             <div class="card img-card-container" style="width: 12rem;height: 460px;">
               <img class="card-img-top card-image-hover" src="img/noun_Medical Report_3283836.png" alt="Card image cap">
-
-              <div class="middle-card-image-content">
-                <div class="card-image-text">Click</div>
-              </div>
-
-              <div class="card-body"  >
+              <div class="card-body">
                 <h5 class="card-title">COVID Self Check</h5><br>
                 <p class="card-text">Take a self test to check for Covid 19</p>
                 <a href="https://landing.google.com/screener/covid19" class="btn btn-primary">Click Here</a>
@@ -144,15 +121,10 @@
             </div>
           </div>
 
-          <div class="col-md" >
+          <div class="col-sm-3">
             <div class="card img-card-container" style="width: 12rem;height: 460px;">
               <img class="card-img-top card-image-hover" src="img/noun_brain care_2418090.png" alt="Card image cap">
-
-              <div class="middle-card-image-content">
-                <div class="card-image-text">Click</div>
-              </div>
-
-              <div class="card-body" >
+              <div class="card-body">
                 <h5 class="card-title">Covid 19 Medical Care</h5><br>
                 <p class="card-text">Find the medical care nearest to UTD</p>
                 <a href="https://medicalcityhealthcare.com/covid-19/" class="btn btn-primary">Click Here</a>
@@ -160,31 +132,9 @@
             </div>
           </div>
 
-
-          <div class="col-md">
+          <div class="col-sm-3">
             <div class="card img-card-container" style="width: 12rem;height: 460px;">
-              <img class="card-img-top card-image-hover" src="img/noun_data visualization_2034138.png" alt="Card image cap">
-
-              <div class="middle-card-image-content">
-                <div class="card-image-text">Click</div>
-              </div>
-
-              <div class="card-body">
-                <h5 class="card-title">COVID 19 Visualization</h5>
-                <p class="card-text">Data Modelling and Visualizations</p><br>
-                <a href="https://jariel97.github.io/projects.html" class="btn btn-primary">Click Here</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md" >
-            <div class="card img-card-container" style="width: 12rem;" style="height:460px;">
               <img class="card-img-top card-image-hover" src="img/noun_empathy_2683229.png" alt="Card image cap">
-
-              <div class="middle-card-image-content">
-                <div class="card-image-text">Click</div>
-              </div>
-
               <div class="card-body">
                 <h5 class="card-title">Covid 19 Mental Health</h5>
                 <p class="card-text">Find the best Mental Helath Resources in Dallas</p>
@@ -194,28 +144,32 @@
           </div>
 
 
+        </div>
+        <h1> Visualizations :</h1>
+        <div class="row">
 
-          <!-- Modal -->
-          <div class="modal fade" id="myModal" role="dialog">
-            <div class="modal-dialog">
 
-              <!-- Modal content-->
-              <div class="modal-content">
-                <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal">&times;</button>
-                  <h4 class="modal-title">Modal Header</h4>
-                </div>
-                <div class="modal-body">
-                  <p>Some text in the modal.</p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
+          <div class="col-sm-3" >
+            <div class="card img-card-container" style="width: 12rem;height: 460px;">
+              <img class="card-img-top card-image-hover" src="img/noun_data visualization_2034138.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">COVID 19 Visualization</h5>
+                <p class="card-text">Data Modelling and Visualizations</p><br>
+                <a href="https://jariel97.github.io/projects.html" class="btn btn-primary">Click Here</a>
               </div>
-
             </div>
           </div>
 
+          <div class="col-sm-3">
+            <div class="card img-card-container" style="width: 12rem;height: 460px;">
+              <img class="card-img-top card-image-hover" src="img/visual.png" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Visualization</h5>
+                <p class="card-text">Graphic Visualization</p><br><br>
+                <a href="https://dfwcovid19.utdallas.edu" class="btn btn-primary">Click Here</a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div style="margin-top:150px;">
@@ -252,9 +206,9 @@
   <!-- Bootstrap JS -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-<script src = "js/TexasNumbers.js">
-texasConfirmedDeaths();
-</script>
+  <script src="js/TexasNumbers.js">
+    texasConfirmedDeaths();
+  </script>
 
   <script type="text/javascript">
     $(document).ready(function() {
